# argon2

./: .Rbuildignore  .gitignore  .travis.yml  ChangeLog  DESCRIPTION  LICENSE  LICENSE.md  NAMESPACE  README.md  cleanup  configure  configure.ac
R/: argon2-package.r  argon2.r  blake2b.r  gen_nonce.r  pw.r  raw_as_char.r  raw_to_char.r  utils.r
inst/: CITATION
man/: argon2-package.Rd  blake2b.Rd  gen_nonce.Rd  hashing.Rd  raw_as_char.Rd  raw_to_char.Rd
src/: Makevars  Makevars.in  Makevars.win  argon2.c  argon2_native.c  blake2.c  common.h  gen_nonce.c  pw_hash.c  random_uchars.h  raw_as_char.c  raw_to_char.c
src/argon2/: NOTES.txt  encoding.c
src/argon2/blake2/: blake2.h
tests/: blake2b.R  gen_nonce.R  pw_hash.R  raw_as_char.R  raw_to_char.R
